RESOLVED FIXED43048
UI process needs a way to find out when the web process crashes
https://bugs.webkit.org/show_bug.cgi?id=43048
Summary UI process needs a way to find out when the web process crashes
Adam Roben (:aroben)
Reported 2010-07-27 07:41:19 PDT
There's no API for the UI process to find out when the web process crashes. We should add one! Probably adding a WKPageProcessDidExitCallback member to WKPageLoaderClient is the way to go for now (though we might move it to wherever the DidBecome[Un]ResponsiveCallbacks go, once they move to a new client).
Attachments
Patch (4.75 KB, patch)
2010-07-27 08:32 PDT, Adam Roben (:aroben)
andersca: review+
Adam Roben (:aroben)
Comment 1 2010-07-27 07:42:36 PDT
Adam Roben (:aroben)
Comment 2 2010-07-27 08:32:29 PDT
WebKit Review Bot
Comment 3 2010-07-27 08:33:20 PDT
Attachment 62694 [details] did not pass style-queue: Failed to run "['WebKitTools/Scripts/check-webkit-style']" exit_code: 1 WebKit2/UIProcess/API/C/WKPage.h:96: Extra space between WKPageProcessDidExitCallback and processDidExit [whitespace/declaration] [3] Total errors found: 1 in 5 files If any of these errors are false positives, please file a bug against check-webkit-style.
Adam Roben (:aroben)
Comment 4 2010-07-27 09:08:56 PDT
Note You need to log in before you can comment on or make changes to this bug.