Add a ProcessDidExit callback to the WKPageLoaderClient

Fixes <http://webkit.org/b/43048> UI process needs a way to find out
when the web process crashes

Reviewed by Anders Carlsson.

* UIProcess/API/C/WKPage.h: Added WKPageProcessDidExitCallback, and a
processDidExit member of that type to WKPageLoaderClient.

* UIProcess/WebLoaderClient.cpp:
(WebKit::WebLoaderClient::processDidExit): Added. Calls through to the
WKPageLoaderClient.

* UIProcess/WebLoaderClient.h: Added processDidExit.

* UIProcess/WebPageProxy.cpp:
(WebKit::WebPageProxy::processDidExit): Tell the loader client the
process exited.

Canonical link: https://commits.webkit.org/54960@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@64132 268f45cc-cd09-0410-ab3c-d52691b4dbfc