WebKit2/UIProcess/WebLoaderClient.cpp
@@ -127,6 +127,12 @@ void WebLoaderClient::didBecomeResponsive(WebPageProxy* page)
         m_pageLoaderClient.didBecomeResponsive(toRef(page), m_pageLoaderClient.clientInfo);
 }
 
+void WebLoaderClient::processDidExit(WebPageProxy* page)
+{
+    if (m_pageLoaderClient.processDidExit)
+        m_pageLoaderClient.processDidExit(toRef(page), m_pageLoaderClient.clientInfo);
+}
+
 void WebLoaderClient::didChangeBackForwardList(WebPageProxy* page)
 {
     if (m_pageLoaderClient.didChangeBackForwardList)
